# CursesDialogs

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  remakesourcelist
CursesDialogs/: flagsandlibs  sources
CursesDialogs/dialog-src/: ctkfbimageviewer.cpp  ctkinput.cpp  ctkopenfile.cpp  ctkopenfolder.cpp  ctkquery.cpp  ctksavefile.cpp
CursesDialogs/dialogs/: Makefile.am  Makefile.in
CursesDialogs/frontends/: Makefile.am  Makefile.in
CursesDialogs/frontends-src/: castreceiver.cpp  castreceiver.h  ctkdump.cpp  musicplayer.cpp  musicplayer.h
CursesDialogs/resources/help/: about
CursesDialogs/src/: ctkinput.cpp  ctkopenfile.cpp  ctkopenfolder.cpp  ctkquery.cpp  ctksavefile.cpp
