#
#
AC_INIT([CursesDialogs],[0.1.0],[PROJ],[CursesDialogs])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

CFLAGS=-Wall

CURSESTOOLKIT_MODULES="cursestoolkit >= 2.0.1"
PKG_CHECK_MODULES(CURSESTOOLKIT, $CURSESTOOLKIT_MODULES)
AC_SUBST(CURSESTOOLKIT_CFLAGS)
AC_SUBST(CURSESTOOLKIT_LIBS)

AC_OUTPUT(Makefile CursesDialogs/dialogs/Makefile  CursesDialogs/frontends/Makefile)

