
AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs

ctkopenfile_SOURCES = ../src/ctkopenfile.cpp
ctkopenfolder_SOURCES = ../src/ctkopenfolder.cpp
ctksavefile_SOURCES = ../src/ctksavefile.cpp
ctkinput_SOURCES = ../src/ctkinput.cpp
ctkquery_SOURCES = ../src/ctkquery.cpp

bin_PROGRAMS = ctkopenfile ctksavefile ctkinput ctkquery ctkopenfolder

