
AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs

ctkopenfile_SOURCES = ../dialog-src/ctkopenfile.cpp
ctkopenfolder_SOURCES = ../dialog-src/ctkopenfolder.cpp
ctksavefile_SOURCES = ../dialog-src/ctksavefile.cpp
ctkinput_SOURCES = ../dialog-src/ctkinput.cpp
ctkquery_SOURCES = ../dialog-src/ctkquery.cpp
ctkfbimageviewer_SOURCES = ../dialog-src/ctkfbimageviewer.cpp

bin_PROGRAMS = ctkopenfile ctksavefile ctkinput ctkquery ctkopenfolder ctkfbimageviewer

